--- a/public/V2/Items/Items.html
+++ b/public/V2/Items/Items.html
@@ -70,13 +70,20 @@
                         </a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./insertfooter.html">
-                                <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Insert Footer
+
+                        <li class="nav-item ">
+                            <a class="nav-link text-white rounded text-center " href="./insertfooter.html">
+                                <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i>
+                                Insert_F
                             </a>
                         </li>
-
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning  d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert_H
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
                                 <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
@@ -105,18 +112,23 @@
             </div>
         </div>
 
-      
+
 
     </header>
     <main>
         <section class="py-5 mt-5">
             <div class="container">
                 <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
-                    <li class="breadcrumb-item"><a href="#">Items</a></li>
-                   
-            </nav>
+                    <ol class="breadcrumb mb-4">
+                        <li class="breadcrumb-item">
+                            <a href="../V2.html" class="d-flex align-items-center">
+                                <i class="bi bi-house me-1"></i> 
+                            </a>
+                        </li>
+                        <li class="breadcrumb-item " aria-current="page">Items</li>
+                    </ol>
+                </nav>
+
                 <div class="row justify-content-center g-5">
                     <div class="col-md-5">
                         <div class="card shadow-lg border-0 rounded-4">
@@ -143,6 +155,12 @@
                                             <a class="dropdown-item d-flex align-items-center" href="insertfooter.html">
                                                 <i class="bi bi-building-add text-info me-3 fs-5"></i>
                                                 <span>Insert Footer</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item d-flex align-items-center" href="tFInTH.html">
+                                                <i class="bi bi-journal-plus text-warning  me-3 fs-5"></i>
+                                                <span>Insert Header</span>
                                             </a>
                                         </li>
                                         <li>
