--- a/public/V2/Items/alter.html
+++ b/public/V2/Items/alter.html
@@ -50,7 +50,7 @@
                 </a>
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="./items.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -69,11 +69,18 @@
                                 <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
                                     style="font-size: 1.5rem;"></i> Insert
                             </a>
+                       <li class="nav-item ">
+                            <a class="nav-link text-white rounded text-center "
+                                href="./insertfooter.html">
+                                <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i>
+                                Insert_F
+                            </a>
                         </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./insertfooter.html">
-                                <i class="bi bi-building-add text-info d-block mb-1"
-                                    style="font-size: 1.5rem;"></i> Insert footer
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning  d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert_H
                             </a>
                         </li>
                         <li class="nav-item">
@@ -101,10 +108,10 @@
         </div>
 
     </header>
-    <main>
+     <main class="content">
         <div id="toolbar" class="">
             <a id="RefreshATagId" href="#"
-                class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-dark text-white"
+                class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-gray-600 text-white"
                 style="width: 40px; height: 40px; border-radius: 50%;">
                 <svg class="icon icon-xs" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16"
                     width="16" height="16">
@@ -115,13 +122,14 @@
                 </svg>
             </a>
         </div>
-        <div class="container">
-             <div class="container">
+       <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
-                    <li class="breadcrumb-item"><a href="#">Items</a></li>
-                    <li class="breadcrumb-item"><a href="#">Alter <Footer></Footer></a></li>
+                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
+                    </li>
+                    </a>
+                    <li class="breadcrumb-item"><a href="./Items.html">Items</a></li>
+                    <li class="breadcrumb-item " aria-current="page">Alter</li>
             </nav>
             <div class="card mt-5">
                 <div class="card-body">
