--- a/public/V2/Items/delete.html
+++ b/public/V2/Items/delete.html
@@ -41,22 +41,23 @@
 <body>
     <header>
         <div class="px-3 py-2 text-bg-dark border-bottom">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-                <a href="/" class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
-                    <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
-                    <span class="fs-4">KeshavSoft</span>
-                </a>
+                    <a href="/"
+                        class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-white text-decoration-none">
+                        <i class="bi bi-bootstrap me-2" style="font-size: 1.8rem;"></i>
+                        <span class="fs-4">KeshavSoft</span>
+                    </a>
 
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="./Items.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
-                       
-                      
+
+
                         <li class="nav-item">
                             <a href="./Items.html" class="nav-link text-white d-flex flex-column align-items-center">
                                 <i class="bi bi-arrow-90deg-left" style="font-size: 1.5rem;"></i>
@@ -70,10 +71,17 @@
                                     style="font-size: 1.5rem;"></i> Insert
                             </a>
                         </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./insertfooter.html">
-                                <i class="bi bi-building-add text-info d-block mb-1"
-                                    style="font-size: 1.5rem;"></i> Insert Footer
+                        <li class="nav-item ">
+                            <a class="nav-link text-white rounded text-center " href="./insertfooter.html">
+                                <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i>
+                                Insert_F
+                            </a>
+                        </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning  d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Insert_H
                             </a>
                         </li>
                         <li class="nav-item">
@@ -90,7 +98,8 @@
                         <li class="nav-item active">
                             <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
                                 href="./delete.html">
-                                <i class="bi bibi bi-trash-fill text-danger  d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bibi bi-trash-fill text-danger  d-block mb-1"
+                                    style="font-size: 1.5rem;"></i>
                                 Delete
                             </a>
                         </li>
@@ -115,22 +124,24 @@
                 </svg>
             </a>
         </div>
-        <div class="container"> <div class="container">
+        <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
-                    <li class="breadcrumb-item"><a href="#">Items</a></li>
-                    <li class="breadcrumb-item"><a href="#">Delete <Footer></Footer></a></li>
-            </nav>
-            <div class="card mt-5">
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table id="table" class="table table-bordered table-striped">
-                        </table>
+                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
+                    </li>
+                    </a>
+                    <li class="breadcrumb-item"><a href="./Items.html">Items</a></li>
+                    <li class="breadcrumb-item " aria-current="page">Delete</li>
+                </nav>
+                <div class="card mt-5">
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table id="table" class="table table-bordered table-striped">
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </main>
 
     <footer class="mt-5 border-top text-dark" style="margin-top: 7rem !important;">
