--- a/public/V2/Farmers/Farmers.html
+++ b/public/V2/Farmers/Farmers.html
@@ -73,11 +73,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./crud.html">
                                 <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Insert Footer
+                                Insert_F
                             </a>
                         </li>
-                        <li class="nav-item active">
-                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                        <li class="nav-item">
+                            <a class="nav-link text-white"
                                 href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
@@ -120,8 +120,8 @@
             <div class="container">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb mb-4">
-                        <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
-                        <li class="breadcrumb-item"><a href="#">Farmers</a></li>
+                        <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
+                        <li class="breadcrumb-item">Farmers</a></li>
 
                 </nav>
                 <div class="row justify-content-center g-5">
@@ -146,12 +146,20 @@
                                         </li>
                                         <li>
 
+                                            <li>
+                                            <a class="dropdown-item d-flex align-items-center" href="tFInTH.html">
+                                                <i class="bi bi-journal-plus text-warning me-3 fs-5"></i>
+                                                <span>Insert Header</span>
+                                            </a>
+                                        </li>
+
                                         <li>
                                             <a class="dropdown-item d-flex align-items-center" href="crud.html">
                                                 <i class="bi bi-building-add text-info me-3 fs-5"></i>
                                                 <span>Insert Footer</span>
                                             </a>
                                         </li>
+
                                         <li>
 
                                             <a class="dropdown-item d-flex align-items-center" href="./show.html">
