--- a/public/V2/Items/alter.html
+++ b/public/V2/Items/alter.html
@@ -108,10 +108,10 @@
         </div>
 
     </header>
-     <main class="content">
+     <main>
         <div id="toolbar" class="">
             <a id="RefreshATagId" href="#"
-                class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-gray-600 text-white"
+                class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-dark text-white"
                 style="width: 40px; height: 40px; border-radius: 50%;">
                 <svg class="icon icon-xs" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16"
                     width="16" height="16">
@@ -122,14 +122,12 @@
                 </svg>
             </a>
         </div>
-       <div class="container">
+        <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
-                    </li>
-                    </a>
                     <li class="breadcrumb-item"><a href="./Items.html">Items</a></li>
-                    <li class="breadcrumb-item " aria-current="page">Alter</li>
+                    <li class="breadcrumb-item">Alter</a></li>
             </nav>
             <div class="card mt-5">
                 <div class="card-body">
