--- a/public/V2/Farmers/crud.html
+++ b/public/V2/Farmers/crud.html
@@ -54,7 +54,7 @@
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
 
                         <li>
-                            <a href="../Farmers/Farmers.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -78,12 +78,12 @@
                             <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
                                 href="./crud.html">
                                 <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i>
-                                Insert Footer
+                                Insert_F
                             </a>
                         </li>
 
-                        <li class="nav-item active">
-                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
+                        <li class="nav-item">
+                            <a class="nav-link text-white"
                                 href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
                                 Insert_H
@@ -136,9 +136,9 @@
         <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
-                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
-                    <li class="breadcrumb-item"><a href="#">Insert Footer <Footer></Footer></a></li>
+                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
+                    <li class="breadcrumb-item">Farmers</a></li>
+                    <li class="breadcrumb-item">Insert Footer <Footer></Footer></a></li>
             </nav>
             <div class="card mt-5">
                 <div class="card-body">
