--- a/public/V2/Sales/crud.html
+++ b/public/V2/Sales/crud.html
@@ -51,10 +51,10 @@
                     </a>
 
 
-                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                   <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
 
                         <li>
-                            <a href="../Sales/Sales.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -78,9 +78,18 @@
                             <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
                                 href="./crud.html">
                                 <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i>
-                                Insert Footer
+                                Insert_F
                             </a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white"
+                                href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
+                                Insert_H
+                            </a>
+                        </li>
+
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
@@ -127,9 +136,9 @@
         <div class="container">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
-                    <li class="breadcrumb-item"><a href="#">Sales</a></li>
-                    <li class="breadcrumb-item"><a href="#">Insert Footer <Footer></Footer></a></li>
+                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
+                    <li class="breadcrumb-item">Sales</a></li>
+                    <li class="breadcrumb-item">Insert Footer <Footer></Footer></a></li>
             </nav>
             <div class="card mt-5">
                 <div class="card-body">
