--- a/public/V2/Sales/delete.html
+++ b/public/V2/Sales/delete.html
@@ -49,10 +49,10 @@
                     <span class="fs-4">KeshavSoft</span>
                 </a>
 
-                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
-                        
+                   <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+
                         <li>
-                            <a href="../Sales/Sales.html" class="nav-link text-white text-center">
+                            <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
@@ -66,7 +66,8 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./create.html">
-                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1" style="font-size: 1.5rem;"></i>
+                                <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
+                                    style="font-size: 1.5rem;"></i>
                                 Insert
                             </a>
                         </li>
@@ -74,7 +75,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./crud.html">
                                 <i class="bi bi-building-add text-info d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Insert Footer
+                                Insert_F
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white"
+                                href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
+                                Insert_H
                             </a>
                         </li>
 
@@ -87,8 +95,9 @@
 
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./alter.html">
-                                <i class="bi bi-pencil-square  text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
-                               Alter
+                                <i class="bi bi-pencil-square  text-warning d-block mb-1"
+                                    style="font-size: 1.5rem;"></i>
+                                Alter
                             </a>
                         </li>
 
@@ -104,16 +113,12 @@
             </div>
         </div>
 
+
+
+
+
     </header>
     <main>
-
-        <div class="container">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
-                     <li class="breadcrumb-item bi bi-house d-block mb-1"><a href="#"></a></li>
-                    <li class="breadcrumb-item"><a href="#">Sales</a></li>
-                    <li class="breadcrumb-item"><a href="#">Delete</a></li>
-            </nav>
         <div id="toolbar" class="">
             <a id="RefreshATagId" href="#"
                 class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-dark text-white"
@@ -128,6 +133,12 @@
             </a>
         </div>
         <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
+                    <li class="breadcrumb-item">Sales</a></li>
+                    <li class="breadcrumb-item">Delete</a></li>
+            </nav>
             <div class="card mt-5">
                 <div class="card-body">
                     <div class="table-responsive">
