--- a/public/V2/Sales/tFInTH.html
+++ b/public/V2/Sales/tFInTH.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -50,70 +50,76 @@
                         <span class="fs-4">KeshavSoft</span>
                     </a>
 
+
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+
                         <li>
                             <a href="../V2.html" class="nav-link text-white text-center">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i> Home
                             </a>
                         </li>
 
-
                         <li class="nav-item">
-                            <a href="./Items.html" class="nav-link text-white d-flex flex-column align-items-center">
-                                <i class="bi bi-arrow-90deg-left" style="font-size: 1.5rem;"></i>
+                            <a href="./Sales.html" class="nav-link text-white d-flex flex-column align-items-center">
+                                <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
                                 <span>Parent</span>
                             </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./Create.html">
+                            <a class="nav-link text-white text-center" href="./create.html">
                                 <i class="bi bi-plus-circle-fill text-primary d-block mb-1"
-                                    style="font-size: 1.5rem;"></i> Insert
+                                    style="font-size: 1.5rem;"></i>
+                                Insert
                             </a>
                         </li>
+
                         <li class="nav-item ">
-                            <a class="nav-link text-white rounded text-center " href="./insertfooter.html">
+                            <a class="nav-link text-white rounded text-center "
+                                href="./crud.html">
                                 <i class="bi bi-building-add text-info d-block mb-1 fs-4"></i>
                                 Insert_F
                             </a>
                         </li>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./tFInTH.html">
+                        <li class="nav-item active">
+                            <a class="nav-link text-white text-center bg-light bg-opacity-25" href="./tFInTH.html">
                                 <i class="bi bi-journal-plus text-warning  d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Insert_H
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white text-center" href="./show.html">
-                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i> Show
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white text-center" href="./alter.html">
-                                <i class="bi bi-pencil-square text-warning d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Alter
-                            </a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link text-white rounded text-center bg-light bg-opacity-25"
-                                href="./delete.html">
-                                <i class="bi bibi bi-trash-fill text-danger  d-block mb-1"
-                                    style="font-size: 1.5rem;"></i>
-                                Delete
+                                <i class="bi bi-eye-fill text-success d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Show
                             </a>
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./alter.html">
+                                <i class="bi bi-pencil-square  text-warning d-block mb-1"
+                                    style="font-size: 1.5rem;"></i>
+                                Alter
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center" href="./Delete.html">
+                                <i class="bi bi-trash-fill text-danger d-block mb-1" style="font-size: 1.5rem;"></i>
+                                Delete
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </div>
 
+
     </header>
-    <main>
+    <main class="content">
         <div id="toolbar" class="">
             <a id="RefreshATagId" href="#"
-                class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-dark text-white"
+                class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-gray-600 text-white"
                 style="width: 40px; height: 40px; border-radius: 50%;">
                 <svg class="icon icon-xs" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16"
                     width="16" height="16">
@@ -128,20 +134,116 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
-                    <li class="breadcrumb-item"><a href="./Items.html">Items</a></li>
-                    <li class="breadcrumb-item">Delete</a></li>
+                    <li class="breadcrumb-item">Sales</a></li>
+                    <li class="breadcrumb-item">Insert Header <Footer></Footer></a></li>
             </nav>
             <div class="card mt-5">
                 <div class="card-body">
-                        <div class="table-responsive">
-                            <table id="table" class="table table-bordered table-striped">
-                            </table>
-                        </div>
+                    <div class="table-responsive">
+                        <table id="table" class="table" data-show-footer="true">
+                            <thead>
+
+                                <tr>
+                                    <th>
+                                        #
+                                    </th>
+                                    <th>
+                                        PartyName
+                                    </th>
+                                    <th>
+                                        VoucherType
+                                    </th>
+                                    <th>
+                                        Date
+                                    </th>
+                                    <th>
+                                        Reference
+                                    </th>
+                                    <th>
+                                        VoucherCancelled
+                                    </th>
+                                    
+                                </tr>
+
+
+                                <tr>
+                                    <th></th>
+                                    <th>
+                                        <div class="input-group">
+                                            <input type="text" class="form-control" id="TableFooterPartyNameInputId"
+                                                autocomplete="off" placeholder="Enter PartyName" required>
+                                            <div class="invalid-feedback">
+                                                Please provide correct Name.
+                                            </div>
+                                        </div>
+                                    </th>
+
+                                    <th>
+                                        <div class="input-group">
+                                            <input class="form-control" id="TableFooterVoucherTypeInputId" type="text"
+                                                placeholder="Enter VoucherType">
+                                            <div class="invalid-feedback">
+                                                Please enter Valid VoucherType
+                                            </div>
+                                        </div>
+                                    </th>
+
+                                    <th>
+                                        <div class="input-group">
+                                            <input class="form-control" id="TableFooterDateInputId" type="date"
+                                                placeholder="Enter Date">
+                                            <div class="invalid-feedback">
+                                                Please enter Valid date
+                                            </div>
+                                        </div>
+                                    </th>
+
+                                    <th>
+                                        <div class="input-group">
+                                            <input class="form-control" id="TableFooterReferenceInputId" type="text"
+                                                placeholder="Enter Valid Reference">
+                                            <div class="invalid-feedback">
+                                                Please enter Valid Reference
+                                            </div>
+                                        </div>
+                                    </th>
+
+                                    <th>
+                                        <div class="input-group">
+                                            <input class="form-control" id="TableFooterVoucherCancelledInputId"
+                                                type="text" placeholder="Enter VoucherCancelled">
+                                            <div class="invalid-feedback">
+                                                Please enter Valid VoucherCancelled
+                                            </div>
+                                        </div>
+                                    </th>
+
+                                    <th class="text-start">
+                                        <button class="btn btn-outline-success" type="button"
+                                            id="TableFooterSaveButtonId">
+                                            Save
+                                        </button>
+                                    </th>
+                                </tr>
+                                <tr id="tableHeadRow">
+                                    <th data-formatter="jFLocalSerialColumn"></th>
+                                    <th data-field="PARTYNAME"></th>
+                                    <th data-field="VOUCHERTYPE"></th>
+                                    <th data-field="DATE"></th>
+                                    <th data-field="REFERENCE"></th>
+                                    <th data-field="VOUCHERCANCELLED"></th>
+
+                                </tr>
+                            </thead>
+                            <tfoot>
+
+                            </tfoot>
+                        </table>
                     </div>
                 </div>
             </div>
+        </div>
     </main>
-
     <footer class="mt-5 border-top text-dark" style="margin-top: 7rem !important;">
         <div class="container py-4 d-flex flex-wrap justify-content-between align-items-center">
             <div class="col-md-4 d-flex align-items-center mb-3 mb-md-0">
@@ -166,8 +268,6 @@
             </ul>
         </div>
     </footer>
-
-    <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js "
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r "
         crossorigin="anonymous "></script>
@@ -181,7 +281,12 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-table@1.22.6/dist/bootstrap-table.min.js"></script>
 
-    <script type="module" src="./Js/Delete/entryFile.js"></script>
+    <script>
+        function jFLocalSerialColumn(value, row, index) {
+            return index + 1;
+        };
+    </script>
+    <script type="module" src="./Js/TFInTH/entryFile.js"></script>
 </body>
 
 </html>
