--- a/public/V2/Sales/update.html
+++ b/public/V2/Sales/update.html
@@ -50,11 +50,11 @@
                 </a>
 
 
-                    <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+                   <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
 
                         <!-- Home -->
                         <li>
-                            <a href="../Farmers/Farmers.html"
+                            <a href="../V2.html"
                                 class="nav-link text-white text-center @@if (context.page === 'home') { active }">
                                 <i class="bi bi-house d-block mb-1" style="font-size: 1.5rem;"></i>
                                 Home
@@ -63,7 +63,7 @@
 
                         <!-- Parent -->
                         <li class="nav-item">
-                            <a href="./Farmers.html"
+                            <a href="./Sales.html"
                                 class="nav-link text-white d-flex flex-column align-items-center @@if (context.page === 'parent') { active }">
                                 <i class="bi bi-arrow-90deg-left d-block mb-1" style="font-size: 1.5rem;"></i>
                                 <span>Parent</span>
@@ -84,7 +84,14 @@
                             <a class="nav-link text-white text-center @@if (context.page === 'insertFooter') { active }"
                                 href="./Create.html">
                                 <i class="bi bi-building-add d-block mb-1" style="font-size: 1.5rem;"></i>
-                                Insert Footer
+                                Insert_F
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white text-center @@if (context.page === 'tFInTH') { active }"
+                                href="./tFInTH.html">
+                                <i class="bi bi-journal-plus text-warning d-block mb-1 fs-4"></i>
+                                Insert_H
                             </a>
                         </li>
 
@@ -122,23 +129,31 @@
             </div>
         </div>
 
-        <div class="px-5 mt-5">
-            <h2 class="mb-2 fw-bold">Dashboard</h2>
-
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item"><a href="#">Farmers</a></li>
-                    <li class="breadcrumb-item"><a href="#">Update</a></li>
-            </nav>
-        </div>
-
-          </div>
-
     </header>
     <main>
 
-        <div class="container mt-5">
-            <div class="card">
+        <main>
+        <div id="toolbar" class="">
+            <a id="RefreshATagId" href="#"
+                class="btn d-flex justify-content-center align-items-center RefreshBSTableClass bg-dark text-white"
+                style="width: 40px; height: 40px; border-radius: 50%;">
+                <svg class="icon icon-xs" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16"
+                    width="16" height="16">
+                    <path
+                        d="M1.161 8a6.84 6.84 0 1 0 6.842-6.84.58.58 0 1 1 0-1.16 8 8 0 1 1-6.556 3.412l-.663-.577a.58.58 0 0 1 .227-.997l2.52-.69a.58.58 0 0 1 .728.633l-.332 2.592a.58.58 0 0 1-.956.364l-.643-.56A6.8 6.8 0 0 0 1.16 8z" />
+                    <path
+                        d="M6.641 11.671V8.843h1.57l1.498 2.828h1.314L9.377 8.665c.897-.3 1.427-1.106 1.427-2.1 0-1.37-.943-2.246-2.456-2.246H5.5v7.352zm0-3.75V5.277h1.57c.881 0 1.416.499 1.416 1.32 0 .84-.504 1.324-1.386 1.324z" />
+                </svg>
+            </a>
+        </div>
+        <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item"><a href="../V2.html" class="bi bi-house me-1"></i></a>
+                    <li class="breadcrumb-item">Sales</a></li>
+                    <li class="breadcrumb-item">Update</a></li>
+            </nav>
+            <div class="card mt-5">
                 <div class="card-body">
                     <form onsubmit="return false" id="FormId">
                         <div class="mb-3 row">
